--- a/TurismoEuropa/lugaresTuristicos.html
+++ b/TurismoEuropa/lugaresTuristicos.html
@@ -6,7 +6,7 @@
     <title>Turismo na Europa</title>
 </head>
 <body>
-    <header class="buscando">
+    <head class="buscando">
         <span>Bela Vista</span>
         <nav>
             <ul>
@@ -15,7 +15,7 @@
                 <li>Pagos</li>
             </ul>
         </nav>
-    </header>
+    </head>
 
     <main>
         <section>
