Feat: Link para nova página

--- a/marcoZero/index.html
+++ b/marcoZero/index.html
@@ -8,8 +8,6 @@
 </head>
 <body class="Marco-Zero">
 
-    <div id="wrapper">  
-
     <head>
 
         <h1> <center> <i>Pontos Turísticos do Recife</i></center></h1> <!--Tipo de Logo improvisada-->
@@ -30,10 +28,10 @@
             Assim, o Marco Zero do Recife é um lugar que une história, arte, arquitetura e lazer, sendo parada obrigatória para quem deseja conhecer a alma e as origens da cidade.</p>
 
             
-        <header>
+        <header id="links">
             
-            <a href="https://www.viajali.com.br/marco-zero-recife/" >Saiba mais</a>
-
+            <a href="https://www.viajali.com.br/marco-zero-recife/" id="link">Saiba mais</a>
+            <a href="Novospontos.html" id="link">Novos Pontos Turísticos</a>
         </header>
         </div>
 
