Feat: Atualização tag

--- a/marcoZero/Novospontos.html
+++ b/marcoZero/Novospontos.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="Mais-Pontos">
-    <head>
+    <header>
         <a href="" id="link">Catamarã</a>
         <a href="" id="link"></a>
-    </head>
+    </header>
 
     
     <footer id="rodape">
