Atividade: Novos pontos turísticos

--- a/marcoZero/Novospontos.html
+++ b/marcoZero/Novospontos.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dois novos pontos turísticos</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body class="Mais-Pontos">
-    <header>
-        <a href="" id="link">Catamarã</a>
-        <a href="" id="link"></a>
-    </header>
 
-    
+<body class="Mais-Pontos">
+
+    <main id="mainNovosPontos" >
+        <div class="catamaran"id="pontos">
+            <img src="/imagens/catamaran.jpeg" alt="" width="340px" height="auto" srcset="" >
+            <h2>Camataran</h2>
+            <p>O passeio de catamarã no Recife é uma atração turística que percorre os rios e canais da cidade,
+                oferecendo uma vista panorâmica de pontes históricas, casarões antigos e pontos turísticos como o Parque
+                das Esculturas e o Marco Zero. É uma forma agradável e tranquila de conhecer o Recife, especialmente ao
+                entardecer, com guias que contam curiosidades sobre a história local.</p>
+        </div>
+
+        <div class="marcoZero" id="pontos">
+            <img src="/imagens/ricardoBrennand.jpeg" alt="" width="300px" height="auto" srcset="">
+            <h2>Instituto Ricardo Brennand</h2>
+            <p>O Instituto Ricardo Brennand é um dos museus mais impressionantes do Recife, localizado em uma área verde
+                no bairro da Várzea. Fundado pelo colecionador Ricardo Brennand, o espaço abriga um castelo em estilo
+                medieval, com acervo rico em armas antigas, armaduras, obras de arte e documentos históricos, incluindo
+                peças do período colonial. É um passeio cultural e visualmente impactante, ideal para quem gosta de
+                arte, história e arquitetura.
+
+            </p>
+        </div>
+    </main>
+
     <footer id="rodape">
-        <p><center>&copy; Juliana Felix - Proz Educação</center></p>
+        <p>
+            <center>&copy; Juliana Felix - Proz Educação</center>
+        </p>
     </footer>
 </body>
+
 </html>
