Style: Background MarcoZero

--- a/PROZ-AulasPresenciais/index.html
+++ b/PROZ-AulasPresenciais/index.html
@@ -33,7 +33,18 @@
 
     <div id="resultado" style="color: black"> </div>
 
+    <div>
+        <button onclick="executarFor()" > Executar For</button>
+        <div id="saída" style="color: black"> </div>
+    </div>
+
+    <div>
+        <button onclick="executarArray()" style="margin-top: 20px;" > Executar Array</button>
+        <div id="saida" style="color: black"> </div>
+    </div>
+
 </body>
 <script src="script.js"></script>
 
 </html>
+
