Style: Background MarcoZero

--- a/marcoZero/index.html
+++ b/marcoZero/index.html
@@ -30,8 +30,8 @@
             
         <div id="links">
             
-            <a href="https://www.viajali.com.br/marco-zero-recife/" id="link">Saiba mais</a>
-            <a href="Novospontos.html" id="link">Novos Pontos Turísticos</a>
+            <a href="https://www.viajali.com.br/marco-zero-recife/" class="link">Saiba mais</a>
+            <a href="Novospontos.html" class="link">Novos Pontos Turísticos</a>
         </div>
         </div>
 
