Style: Background MarcoZero

--- a/marcoZero/Novospontos.html
+++ b/marcoZero/Novospontos.html
@@ -11,7 +11,7 @@
 <body class="Mais-Pontos">
 
     <main id="mainNovosPontos" >
-        <div class="catamaran"class="pontos">
+        <div id="catamaran"class="pontos">
             <img src="/imagens/catamaran.jpeg" alt="" width="340px" height="auto" srcset="" >
             <h2>Camataran</h2>
             <p>O passeio de catamarã no Recife é uma atração turística que percorre os rios e canais da cidade,
@@ -20,7 +20,7 @@
                 entardecer, com guias que contam curiosidades sobre a história local.</p>
         </div>
 
-        <div class="marcoZero" class="pontos">
+        <div id="marcoZero" class="pontos">
             <img src="/imagens/ricardoBrennand.jpeg" alt="" width="300px" height="auto" srcset="">
             <h2>Instituto Ricardo Brennand</h2>
             <p>O Instituto Ricardo Brennand é um dos museus mais impressionantes do Recife, localizado em uma área verde
