Style: Background MarcoZero

--- a/marcoZero/Novospontos.html
+++ b/marcoZero/Novospontos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body class="Mais-Pontos">
+<body id="Mais-Pontos">
 
     <main id="mainNovosPontos" >
         <div id="catamaran"class="pontos">
