--- a/marcoZero/Novospontos.html
+++ b/marcoZero/Novospontos.html
@@ -10,9 +10,9 @@
 
 <body id="Mais-Pontos">
 
-    <main id="mainNovosPontos" >
-        <div id="catamaran"class="pontos">
-            <img src="/imagens/catamaran.jpeg" alt="" width="340px" height="auto" srcset="" >
+    <main id="mainNovosPontos">
+        <div id="catamaran" class="pontos">
+            <img src="/imagens/catamaran.jpeg" alt="" width="340px" height="auto" srcset="">
             <h2>Camataran</h2>
             <p>O passeio de catamarã no Recife é uma atração turística que percorre os rios e canais da cidade,
                 oferecendo uma vista panorâmica de pontes históricas, casarões antigos e pontos turísticos como o Parque
@@ -37,6 +37,13 @@
         <p>
             <center>&copy; Juliana Felix - Proz Educação</center>
         </p>
+
+        <div>
+            <ul id="listando">
+                <li class="lista">Proz</li>
+                <li class="lista">Desenvolvedora</li>
+            </ul>
+        </div>
     </footer>
 </body>
 
